[package]
description = "Solana Program Test Framework"
name = "solana-program-test"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
# Fix all dependencies in this fork, so that program-test (the only thing that has been changed)
# can be built and published by itself
[dependencies]
assert_matches = "1.5.0"
async-trait = "0.1.73"
base64 = "0.21.4"
bincode = "1.3.3"
chrono-humanize = "0.2.3"
crossbeam-channel = "0.5.8"
log = "0.4.20"
serde = "1.0.188"
solana-accounts-db = "1.17.9"
solana-banks-client = "1.17.9"
solana-banks-interface = "1.17.9"
solana-banks-server = "1.17.9"
solana-bpf-loader-program = "1.17.9"
solana-logger = "1.17.9"
solana-program-runtime = "1.17.9"
solana-runtime = "1.17.9"
solana-sdk = "1.17.9"
solana-vote-program = "1.17.9"
solana_rbpf = "0.8.0"
test-case = "3.2.1"
thiserror = "1.0.49"
tokio = { version = "1.29.1", features = ["full"] }

[dev-dependencies]
solana-stake-program = { workspace = true }
